--- a/quickstart.yml
+++ b/quickstart.yml
@@ -15,63 +15,47 @@ version: '3.7'
 services:
 
   hydra:
-    image: oryd/hydra:v1.10.6-sqlite
-    ports:
-      - "4444:4444" # Public port
-      - "4445:4445" # Admin port
-      - "5555:5555" # Port for hydra token user
+    image: oryd/hydra:v1.10.6
+    container_name: hydra
+#    ports:
+#      - "4444:4444" # Public port
+#      - "4445:4445" # Admin port
+#      - "5555:5555" # Port for hydra token user
     command:
       serve -c /etc/config/hydra/hydra.yml all --dangerous-force-http
     volumes:
       -
-        type: volume
-        source: hydra-sqlite
-        target: /var/lib/sqlite
-        read_only: false
-      -
         type: bind
-        source: ./contrib/quickstart/5-min
+        source: ./5-min
         target: /etc/config/hydra
     environment:
-      - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true
+      - DSN=mysql://root:root@tcp(localhost:3306)/hydra?max_conns=20&max_idle_conns=4
     restart: unless-stopped
     depends_on:
       - hydra-migrate
-    networks:
-      - intranet
+    network_mode: host
 
   hydra-migrate:
-    image: oryd/hydra:v1.10.6-sqlite
+    image: oryd/hydra:v1.10.6
+    container_name: hydra-migrate
     environment:
-      - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true
+      - DSN=mysql://root:root@tcp(localhost:3306)/hydra?max_conns=20&max_idle_conns=4
     command:
       migrate -c /etc/config/hydra/hydra.yml sql -e --yes
     volumes:
       -
-        type: volume
-        source: hydra-sqlite
-        target: /var/lib/sqlite
-        read_only: false
-      -
         type: bind
-        source: ./contrib/quickstart/5-min
+        source: ./5-min
         target: /etc/config/hydra
     restart: on-failure
-    networks:
-      - intranet
+    network_mode: host
 
   consent:
+    container_name: consent
     environment:
       - HYDRA_ADMIN_URL=http://hydra:4445
     image: oryd/hydra-login-consent-node:v1.10.6
-    ports:
-      - "3000:3000"
+#    ports:
+#      - "3000:3000"
     restart: unless-stopped
-    networks:
-      - intranet
-
-networks:
-  intranet:
-
-volumes:
-  hydra-sqlite:
+    network_mode: host
